hphp/hack/test/typecheck/like_types/pessimization/erased_generic_bounded_above.php.exp
File "erased_generic_bounded_above.php", line 7, characters 19-20:
Invalid argument (Typing[4110])
File "erased_generic_bounded_above.php", line 4, characters 26-33:
Expected arraykey
File "erased_generic_bounded_above.php", line 6, characters 27-27:
But got T
File "erased_generic_bounded_above.php", line 10, characters 19-20:
Invalid argument (Typing[4110])
File "erased_generic_bounded_above.php", line 4, characters 26-33:
Expected arraykey
File "erased_generic_bounded_above.php", line 9, characters 22-22:
But got T
File "erased_generic_bounded_above.php", line 13, characters 19-20:
Invalid argument (Typing[4110])
File "erased_generic_bounded_above.php", line 4, characters 26-33:
Expected arraykey
File "erased_generic_bounded_above.php", line 12, characters 23-23:
But got T
